jEdit 5.1 version history
       (changes since jEdit 5.0pre1)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Jarek Czekalski, Thomas Meyer, Matthieu Casanova, Alan Ezust,
Malathi, Vladimir Avdonin, Eric Le Lay, Darien Brown, Steve snarum-micron,
and Maik Nijhuis for contributing to this release.

{{{ Bug fixes

- Undo restores selection state in simple cases (deletions, replaces
  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
  Jarek Czekalski)

- Fix a case where a NPE occurs when removing a plugin
  (#3557441 Matthieu Casanova) [5.0pre2]

- Filter not synchronizing in search dialog when
  "All buffers" is selected. (bug #1646584, patch #3549905 Eric Le Lay)

- Recognizing "Extra word characters" in "Whole word" option in
  searches (bug #3522497, patch #3543524 Malathi) [5.0pre2]

- Fix pressing return in parent files of the VFS browser that do not browse 
  the selected folder as it should (patch #3543499 by Eric Le Lay) [5.0pre2]

- Fixed VFS session not ended in VFS.copy() api (#3522406 Matthieu Casanova)

- Use of a scrollable list for delete dialog confirmation
  (#2911520 Matthieu Casanova)

- The macro Display_Abbreviations is broken (#3539691 Matthieu Casanova)
  [5.0pre2]

}}}
{{{ API Changes

- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)

- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)

- New method MiscUtilities.openInDesktop() [5.0pre2] (Alan Ezust)

- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)

- New method: View.getBuffers(), aware of bufferset scope. (Alan Ezust)

}}}
{{{ Editing

- Added highlight of chapter title in rfc edit mode (Matthieu Casanova)

- Fixed shellscript do escape single quote with backslash
  (#3557453 Matthieu Casanova)

- Updated ColdFusion mode (#3518536, #3561048 Darien Brown)

- Updated Verilog mode (#3536967 Steve snarum-micron)

}}}
{{{ UI

- Added a right click popup menu with a copy action in the Error dialog